<resources>
    <string name="app_name">ListViewExercise</string>
    <string name="evenNumber">Even number</string>
    <string name="oddNumber">Odd number</string>
    <string name="squareNumber">Square number</string>
    <string name="show">SHOW</string>
    <string name="toBai2">Exercise 2</string>
    <string name="toBai4">Exercise 4</string>
    <string name="searching">Searching</string>
    <string name="studentName">Student\'s name</string>
    <string name="mssv">MSSV</string>
    <string name="toBai3">Exercise 3</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="birth">Birth date</string>
    <string name="chooseDate">Choose date</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="agree">Agree with policies</string>
    <string name="submit">Submit</string>
    <string name="thumbnail">THUMBNAIL</string>
</resources>