<!-- activity_bai3_form.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- MSSV -->
        <EditText
            android:id="@+id/etMSSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mssv" />

        <!-- Họ Tên -->
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <!-- Giới tính -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <!-- Số điện thoại -->
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />

        <!-- Ngày sinh -->
        <TextView
            android:id="@+id/tvDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth" />
        <Button
            android:id="@+id/btnShowCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseDate" />

        <!-- Địa chỉ -->
        <Spinner
            android:id="@+id/spProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/province" />
        <Spinner
            android:id="@+id/spDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/district" />
        <Spinner
            android:id="@+id/spWard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ward" />

        <!-- Sở thích -->
        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />
        <CheckBox
            android:id="@+id/cbMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />
        <CheckBox
            android:id="@+id/cbMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <!-- Đồng ý điều khoản -->
        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree" />

        <!-- Nút Submit -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/buttonToBai4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toBai4" />
    </LinearLayout>
</ScrollView>
